--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.6",
     "angular": "^1.6.6",
-    "angular-cookies": "^1.6.6"
+    "angular-cookies": "^1.6.6",
+    "install": "^0.10.1",
+    "markdown": "^0.5.0",
+    "npm": "^5.4.2"
   },
   "devDependencies": {
     "angular-ui-router": "^1.0.3",
